roles/openshift-apps/debuginfod/files/deploymentconfig.yml
---
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: debuginfod
  labels:
    app: debuginfod
spec:
  replicas: 1
  selector:
    app: debuginfod
    deploymentconfig: debuginfod
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: debuginfod
        deploymentconfig: debuginfod
    spec:
      selector:
        app: debuginfod
        deploymentconfig: debuginfod
      containers:
      - name: debuginfod
        image: debuginfod:latest
        command: ["/usr/bin/debuginfod",
                  "-vvvvv",
                  "-d", "/tmp/db.sqlite",
                  "-t", "3600",
                  "-g", "604800",
                  "-R", "/mnt",
                  "-I", "zsh.*\\.fc(30|31|32|33|34|35)\\..*\\.rpm$"]
        ports:
        - containerPort: 8002
        resources:
          requests:
            memory: 1000Mi
        volumeMounts:
         - name: debuginfod-volume
           mountPath: /var/cache/debuginfod
           readOnly: false
         - name: koji-volume
           mountPath: /mnt
           readOnly: true
        readinessProbe:
          timeoutSeconds: 1
          initialDelaySeconds: 30
          httpGet:
            path: /metrics
            port: 8002
        livenessProbe:
          timeoutSeconds: 1
          initialDelaySeconds: 30
          periodSeconds: 30
          httpGet:
            path: /metrics
            port: 8002
      volumes:
      - name: debuginfod-volume
        persistentVolumeClaim:
          claimName: debuginfod-volume
      - name: koji-volume
        persistentVolumeClaim:
          claimName: koji-volume
  triggers:
  - type: ConfigChange
  - type: ImageChange
    imageChangeParams:
      automatic: true
      containerNames: ["debuginfod"]
      from:
        kind: ImageStreamTag
        name: debuginfod:latest
