roles/openshift-apps/debuginfod/files/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: debuginfod
  name: debuginfod
spec:
  ports:
  - name: http
    port: 8002
    protocol: TCP
    targetPort: 8002
  selector:
    app: debuginfod
    deploymentconfig: debuginfod
