roles/openshift-apps/debuginfod/files/route.yml
apiVersion: v1
kind: Route
metadata:
  name: debuginfod
  labels:
    app: debuginfod
spec:
  host: debuginfod.fedoraproject.org
  to:
    kind: Service
    name: debuginfod
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
